<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BasketFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basketRecyclerView"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/texture"
        android:layout_width="match_parent"/>
    <LinearLayout
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/orderButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="GO TO CHECKOUT"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>